--- a/www/html/tabs/adventurersTab.html
+++ b/www/html/tabs/adventurersTab.html
@@ -34,42 +34,7 @@
     <div class="tab-pane fade active in" id="idleAdventurers">
         <div class="col-md-12 text-center text-muted">Idle Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Idle')">
-            <div class="panel panel-default ">
-                <div class="panel-heading ">
-                    <h3 class="panel-title">
-                        <abbr title="male" style="color:cornflowerblue;" v-if="adventurer.gender == 'male'">&#9794;</abbr>
-                        <abbr title="female" style="color:pink;" v-if="adventurer.gender == 'female'">&#9792;</abbr>
-                        <abbr :title="adventurer.race.name" :style="'color:' + adventurer.race.symbolColour">{{adventurer.race.symbol}}</abbr>
-                        <span>{{adventurer.name.full}}</span>
-                    </h3>
-                </div>
-                <div class="panel-body ">
-                    <div v-if="adventurer.quote" class="col-xs-12">"
-                        <em>{{adventurer.quote}}</em>"</div>
-                    <legend>Personal</legend>
-                    <div>Race:
-                        <strong>{{adventurer.race.name}}</strong>
-                    </div>
-                    <div>Occupation:
-                        <strong>{{adventurer.type}}</strong>
-                    </div>
-                    <div>Birth Date:
-                        <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong> (
-                        <strong>{{AdventurerManager().getAge(adventurer)}}</strong> years old)</div>
-                    <legend>Skills</legend>
-                    <span v-for="skill in adventurer.skills " :title="skill.name + ' ' + skill.amount ">
-                        <img :alt="skill.name " v-for="n in skill.amount " width="24px " :src=" 'img/icons/' + DataManager().getData( 'skills', skill.name).icon + '.png' "
-                        />
-                    </span>
-                    <legend>Employment</legend>
-                    <img src="./img/icons/crown-coin.png" width="16px" /> Claims
-                    <strong>{{adventurer.wage}}</strong>% of earnings
-                </div>
-                <div class="panel-footer ">
-                    <span>{{adventurer.coins}} coins</span>
-                    <div class="pull-right ">{{adventurer.experience}}xp</div>
-                </div>
-            </div>
+            <adventurer :adventurer="adventurer"></adventurer>
         </div>
     </div>
     <div class="tab-pane fade" id="recoveringAdventurers">
@@ -115,58 +80,22 @@
     <div class="tab-pane fade" id="questingAdventurers">
         <div class="col-md-12 text-center text-muted">Questing Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Questing')">
-            <div class="panel panel-default ">
-                <div class="panel-heading ">
-                    <h3 class="panel-title">
-                        <span style="color:cornflowerblue;" v-if="adventurer.gender == 'male'">&#9794;</span>
-                        <span style="color:pink;" v-if="adventurer.gender == 'female'">&#9792;</span>
-                        <span :style="'color:' + adventurer.race.symbolColour">{{adventurer.race.symbol}}</span>
-                        <span>{{adventurer.name.full}}</span>
-                    </h3>
-                </div>
-                <div class="panel-body ">
-                    <h4>Personal</h4>
-                    <div>Race:
-                        <strong>{{adventurer.race.name}}</strong>
-                    </div>
-                    <div>Occupation:
-                        <strong>{{adventurer.type}}</strong>
-                    </div>
-                    <div>Birth Date:
-                        <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong> (
-                        <strong>{{AdventurerManager().getAge(adventurer)}}</strong>years old)
-                    </div>
-                    <h4>Skills</h4>
-                    <span v-for="skill in adventurer.skills " :title="skill.name + ' ' + skill.amount ">
-                        <img :alt="skill.name " v-for="n in skill.amount " width="24px " :src=" 'img/icons/' + DataManager().getData( 'skills', skill.name).icon + '.png' "
-                        />
-                    </span>
-                    <h4>Employment</h4>
-                    <img src="./img/icons/crown-coin.png" width="16px" /> Claims
-                    <strong>{{adventurer.wage}}</strong>% of earnings
-                    <div v-if="AdventurerManager().getAdventurersQuest(adventurer) !== undefined">
-                        Quest: {{AdventurerManager().getAdventurersQuest(adventurer).contract.name}}
-                    </div>
-                </div>
-                <div class="panel-footer ">
-                    <span>{{adventurer.coins}} coins</span>
-                    <div class="pull-right ">{{adventurer.experience}}xp</div>
-                </div>
-            </div>
+            <adventurer :adventurer="adventurer"></adventurer>
         </div>
     </div>
     <div class="tab-pane fade" id="injuredAdventurers">
         <div class="col-md-12 text-center text-muted">Injured Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Injured')">
+            <adventurer :adventurer="adventurer"></adventurer>
             <div class="panel panel-default ">
                 <div class="panel-heading ">
                     <h3 class="panel-title">
                         <span style="color:cornflowerblue;" v-if="adventurer.gender == 'male'">&#9794;</span>
                         <span style="color:pink;" v-if="adventurer.gender == 'female'">&#9792;</span>
-                        <span :style="'color:' + adventurer.race.symbolColour">{{adventurer.race.symbol}}</span> {{adventurer.name.full}}
+                        <span :style="'color:' + adventurer.race.symbolColour">{{adventurer.race.symbol}}</span><span style="font-family: 'Slackey', cursive;">{{adventurer.name.full}}</span>
                     </h3>
                 </div>
-                <div class="panel-body ">
+                <div class="panel-body">
                     <h4>Personal</h4>
                     <div>Race:
                         <strong>{{adventurer.race.name}}</strong>
@@ -203,45 +132,7 @@
     <div class="tab-pane fade" id="deadAdventurers">
         <div class="col-md-12 text-center text-muted">Deceased Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Dead')">
-            <div class="panel panel-default ">
-                <div class="panel-heading ">
-                    <h3 class="panel-title">
-                        <span style="color:cornflowerblue;" v-if="adventurer.gender == 'male'">&#9794;</span>
-                        <span style="color:pink;" v-if="adventurer.gender == 'female'">&#9792;</span>
-                        <span :style="'color:' + adventurer.race.symbolColour">{{adventurer.race.symbol}}</span>
-                        <span>{{adventurer.name.full}}</span>
-                    </h3>
-                </div>
-                <div class="panel-body ">
-                    <div>Race:
-                        <strong>{{adventurer.race.name}}</strong>
-                    </div>
-                    <div>Occupation:
-                        <strong>{{adventurer.type}}</strong>
-                    </div>
-                    <div>Birth Date:
-                        <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong>
-                    </div>
-                    <div>Death Date:
-                        <strong>{{TimeManager().getGameTime(adventurer.timeOfDeath).toDateString()}}</strong> (Age at death:
-                        <strong>{{AdventurerManager().getAgeAtDeath(adventurer)}}</strong>)</div>
-                    <span v-for="skill in adventurer.skills " :title="skill.name + ' ' + skill.amount ">
-                        <img :alt="skill.name " v-for="n in skill.amount " width="24px " :src=" 'img/icons/' + DataManager().getData( 'skills', skill.name).icon + '.png' "
-                        />
-                    </span>
-                    <h4>Injuries</h4>
-                    <ul>
-                        <li v-if="adventurer.injuries" v-for="injury in adventurer.injuries">
-                            {{injury.injuryType}} {{injury.bodyPart}}
-                        </li>
-                    </ul>
-                    <div>Cause of Death:
-                        <strong>{{adventurer.causeOfDeath}}</strong>
-                    </div>
-                </div>
-                <!-- <div class="panel-footer ">                   
-                </div> -->
-            </div>
+            <adventurer :adventurer="adventurer"></adventurer>
         </div>
     </div>
 </div>
