--- a/www/html/splashPage.html
+++ b/www/html/splashPage.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <div class="container">
-        <h1 class="text-center" style="font-family: 'Slackey', cursive;">Adventurer's of Otium</h1>
+        <h1 class="text-center" style="font-family: 'Slackey', cursive;">Adventurers of Otium</h1>
         <p class="text-center" style="font-family: 'Slackey', cursive;">Adventuring is dangerous. Hire someone else to do it for you!</p>
         <p class="text-center" style="font-family: 'Slackey', cursive;">Loading...</p>
     </div>
