--- a/www/html/tabs/adventurersTab.html
+++ b/www/html/tabs/adventurersTab.html
@@ -40,41 +40,7 @@
     <div class="tab-pane fade" id="recoveringAdventurers">
         <div class="col-md-12 text-center text-muted">Recovering Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Recovering')">
-            <div class="panel panel-default ">
-                <div class="panel-heading ">
-                    <h3 class="panel-title">
-                        <span style="color:cornflowerblue;" v-if="adventurer.gender == 'male'">&#9794;</span>
-                        <span style="color:pink;" v-if="adventurer.gender == 'female'">&#9792;</span>
-                        <span :style="'color:' + adventurer.race.symbolColour">{{adventurer.race.symbol}}</span>
-                        <span>{{adventurer.name.full}}</span>
-                    </h3>
-                </div>
-                <div class="panel-body ">
-                    <h4>Personal</h4>
-                    <div>Race:
-                        <strong>{{adventurer.race.name}}</strong>
-                    </div>
-                    <div>Occupation:
-                        <strong>{{adventurer.type}}</strong>
-                    </div>
-                    <div>Birth Date:
-                        <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong> (
-                        <strong>{{AdventurerManager().getAge(adventurer)}}</strong> years old)</div>
-                    <h4>Skills</h4>
-                    <span v-for="skill in adventurer.skills " :title="skill.name + ' ' + skill.amount ">
-                        <img :alt="skill.name " v-for="n in skill.amount " width="24px " :src=" 'img/icons/' + DataManager().getData( 'skills', skill.name).icon + '.png' "
-                        />
-                    </span>
-                    <h4>Employment</h4>
-                    <img src="./img/icons/crown-coin.png" width="16px" /> Claims
-                    <strong>{{adventurer.wage}}</strong>% of earnings
-                    <div>Will be recovered at: {{TimeManager().getGameTime(adventurer.recoverTime).toString()}} </div>
-                </div>
-                <div class="panel-footer ">
-                    <span>{{adventurer.coins}} coins</span>
-                    <div class="pull-right ">{{adventurer.experience}}xp</div>
-                </div>
-            </div>
+            <adventurer :adventurer="adventurer"></adventurer>
         </div>
     </div>
     <div class="tab-pane fade" id="questingAdventurers">
@@ -87,46 +53,6 @@
         <div class="col-md-12 text-center text-muted">Injured Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Injured')">
             <adventurer :adventurer="adventurer"></adventurer>
-            <div class="panel panel-default ">
-                <div class="panel-heading ">
-                    <h3 class="panel-title">
-                        <span style="color:cornflowerblue;" v-if="adventurer.gender == 'male'">&#9794;</span>
-                        <span style="color:pink;" v-if="adventurer.gender == 'female'">&#9792;</span>
-                        <span :style="'color:' + adventurer.race.symbolColour">{{adventurer.race.symbol}}</span><span style="font-family: 'Slackey', cursive;">{{adventurer.name.full}}</span>
-                    </h3>
-                </div>
-                <div class="panel-body">
-                    <h4>Personal</h4>
-                    <div>Race:
-                        <strong>{{adventurer.race.name}}</strong>
-                    </div>
-                    <div>Occupation:
-                        <strong>{{adventurer.type}}</strong>
-                    </div>
-                    <div>Birth Date:
-                        <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong> (
-                        <strong>{{AdventurerManager().getAge(adventurer)}}</strong>years old)
-                    </div>
-                    <h4>Skills</h4>
-                    <span v-for="skill in adventurer.skills " :title="skill.name + ' ' + skill.amount ">
-                        <img :alt="skill.name " v-for="n in skill.amount " width="24px " :src=" 'img/icons/' + DataManager().getData( 'skills', skill.name).icon + '.png' "
-                        />
-                    </span>
-                    <h4>Employment</h4>
-                    <img src="./img/icons/crown-coin.png" width="16px" /> Claims
-                    <strong>{{adventurer.wage}}</strong>% of earnings
-                    <h4>Injuries</h4>
-                    <ul>
-                        <li v-if="adventurer.injuries" v-for="injury in adventurer.injuries">
-                            {{injury.injuryType}} {{injury.bodyPart}}
-                        </li>
-                    </ul>
-                </div>
-                <div class="panel-footer ">
-                    <span>{{adventurer.coins}} coins</span>
-                    <div class="pull-right ">{{adventurer.experience}}xp</div>
-                </div>
-            </div>
         </div>
     </div>
     <div class="tab-pane fade" id="deadAdventurers">
