Made buttons smaller

--- a/www/html/tabs/adventurersTab.html
+++ b/www/html/tabs/adventurersTab.html
@@ -1,30 +1,30 @@
 <ul class="nav nav-tabs">
     <li class="active">
-        <a href="#idleAdventurers" data-toggle="tab" aria-expanded="false">
+        <a style="padding: 8px;" href="#idleAdventurers" data-toggle="tab" aria-expanded="false">
             <img :src="SpriteManager().getIcon('idle')" width="20px" />
             <span class="badge">{{AdventurerManager().countAdventurersAtStatus('Idle')}}</span>
         </a>
     </li>
     <li>
-        <a href="#recoveringAdventurers" data-toggle="tab" aria-expanded="false">
+        <a style="padding: 8px;" href="#recoveringAdventurers" data-toggle="tab" aria-expanded="false">
             <img :src="SpriteManager().getIcon('recovering')" width="20px" />
             <span class="badge">{{AdventurerManager().countAdventurersAtStatus('Recovering')}}</span>
         </a>
     </li>
     <li>
-        <a href="#questingAdventurers" data-toggle="tab" aria-expanded="false">
+        <a style="padding: 8px;" href="#questingAdventurers" data-toggle="tab" aria-expanded="false">
             <img :src="SpriteManager().getIcon('questing')" width="20px" />
             <span class="badge">{{AdventurerManager().countAdventurersAtStatus('Questing')}}</span>
         </a>
     </li>
     <li>
-        <a href="#injuredAdventurers" data-toggle="tab" aria-expanded="false">
+        <a style="padding: 8px;" href="#injuredAdventurers" data-toggle="tab" aria-expanded="false">
             <img :src="SpriteManager().getIcon('injured')" width="20px" />
             <span class="badge">{{AdventurerManager().countAdventurersAtStatus('Injured')}}</span>
         </a>
     </li>
     <li>
-        <a href="#deadAdventurers" data-toggle="tab" aria-expanded="false">
+        <a style="padding: 8px;" href="#deadAdventurers" data-toggle="tab" aria-expanded="false">
             <img :src="SpriteManager().getIcon('dead')" width="20px" />
             <span class="badge">{{AdventurerManager().countAdventurersAtStatus('Dead')}}</span>
         </a>
