--- a/www/html/tabs/questsTab.html
+++ b/www/html/tabs/questsTab.html
@@ -30,12 +30,12 @@
                                     <em>{{TimeManager().getGameTime(task.startTime).toTimeString()}}</em>:
                                     <span style="font-weight: bold">{{task.name}}</span>
                                     <template v-if="task.attempt > 1">({{task.attempt}})</template>
-                                <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
-                                <template v-else>
+                                    <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
+                                    <template v-else>
                                         <span v-if="task.success" class="text-success">Success</span>
                                         <span v-if="!task.success" class="text-warning">Fail</span>
                                     </template>
-                                <template v-if="task.injury && task.injury.length !== 0">
+                                    <template v-if="task.injury && task.injury.length !== 0">
                                         <ul>
                                             <li>{{task.injury.adventurer.name.full}} suffered
                                                 <span class="text-danger">{{task.injury.injury.injuryType}} {{task.injury.injury.bodyPart}}</span>
@@ -43,7 +43,7 @@
                                         </ul>
                                     </template>
 
-                                <template v-if="task.casualties && task.casualties.length !== 0">
+                                    <template v-if="task.casualties && task.casualties.length !== 0">
                                         <ul>
                                             <li v-for="adventurer in task.casualties">
                                                 {{adventurer.name.full}} has
@@ -105,12 +105,12 @@
                                     <span v-if="task.required" style="font-weight: bold">{{task.name}}</span>
                                     <span v-else>{{task.name}}</span>
                                     <template v-if="task.attempt > 1">({{task.attempt}})</template>
-                                <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
-                                <template v-else>
+                                    <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
+                                    <template v-else>
                                         <span v-if="task.success" class="text-success">Success</span>
                                         <span v-if="!task.success" class="text-warning">Fail</span>
                                     </template>
-                                <template v-if="task.injury && task.injury.length !== 0">
+                                    <template v-if="task.injury && task.injury.length !== 0">
                                         <ul>
                                             <li>{{task.injury.adventurer.name.full}} suffered
                                                 <span class="text-danger">{{task.injury.injury.injuryType}} {{task.injury.injury.bodyPart}}</span>
@@ -118,7 +118,7 @@
                                         </ul>
                                     </template>
 
-                                <template v-if="task.casualties && task.casualties.length !== 0">
+                                    <template v-if="task.casualties && task.casualties.length !== 0">
                                         <ul>
                                             <li v-for="adventurer in task.casualties">
                                                 {{adventurer.name.full}} has
@@ -144,9 +144,17 @@
                             <div class="text-success" v-if="reward.type == 'item'">
                                 <img :src="SpriteManager().getIcon('item')" width="24px" /> {{reward.item.name}}</div>
                         </div>
-                        <h4>Wages paid</h4>
-                        <div v-if="quest.wagesPaid" class="text-danger">
-                            <img src="./img/icons/crown-coin.png" width="24px" /> -{{quest.wagesPaid}} coins</div>
+                        <template v-if="quest.wagesPaid">
+                            <h4>Wages paid</h4>
+                            <div class="text-danger">
+                                <img src="./img/icons/crown-coin.png" width="24px" /> -{{quest.wagesPaid}} coins</div>
+                        </template>
+                        <template v-if="quest.cutsTaken">
+                            <h4>Cuts taken</h4>
+                            <div class="text-danger">
+                                <img src="./img/icons/crown-coin.png" width="24px" /> -{{quest.cutsTaken}} coins</div>
+                        </template>
+
                     </div>
                     <div v-if="quest.survivors && quest.survivors.length !== 0">
                         <h4>Returned adventurers</h4>
