--- a/www/html/tabs/questsTab.html
+++ b/www/html/tabs/questsTab.html
@@ -30,12 +30,12 @@
                                     <em>{{TimeManager().getGameTime(task.startTime).toTimeString()}}</em>:
                                     <span style="font-weight: bold">{{task.name}}</span>
                                     <template v-if="task.attempt > 1">({{task.attempt}})</template>
-                                    <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
-                                    <template v-else>
+                                <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
+                                <template v-else>
                                         <span v-if="task.success" class="text-success">Success</span>
                                         <span v-if="!task.success" class="text-warning">Fail</span>
                                     </template>
-                                    <template v-if="task.injury && task.injury.length !== 0">
+                                <template v-if="task.injury && task.injury.length !== 0">
                                         <ul>
                                             <li>{{task.injury.adventurer.name.full}} suffered
                                                 <span class="text-danger">{{task.injury.injury.injuryType}} {{task.injury.injury.bodyPart}}</span>
@@ -43,7 +43,7 @@
                                         </ul>
                                     </template>
 
-                                    <template v-if="task.casualties && task.casualties.length !== 0">
+                                <template v-if="task.casualties && task.casualties.length !== 0">
                                         <ul>
                                             <li v-for="adventurer in task.casualties">
                                                 {{adventurer.name.full}} has
@@ -54,7 +54,7 @@
                                 </template>
                                 <template v-if="task.status == 'in-progress'">
                                     <em>{{TimeManager().getGameTime(task.startTime).toTimeString()}}</em>: {{task.name}}
-                                    <span class="text-info">{{TimeManager().readableTime(task.finishes - Date.now())}} remaining</span>
+                                    <span class="text-info">({{task.partyEfficiency}} efficiency) {{TimeManager().readableTime(task.finishes - Date.now())}} remaining</span>
                                     <ul v-if="task.skillTest">
                                         <li>{{task.skillTest}} test</li>
                                         <li>Difficulty: {{task.difficulty}}</li>
@@ -105,12 +105,12 @@
                                     <span v-if="task.required" style="font-weight: bold">{{task.name}}</span>
                                     <span v-else>{{task.name}}</span>
                                     <template v-if="task.attempt > 1">({{task.attempt}})</template>
-                                    <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
-                                    <template v-else>
+                                <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
+                                <template v-else>
                                         <span v-if="task.success" class="text-success">Success</span>
                                         <span v-if="!task.success" class="text-warning">Fail</span>
                                     </template>
-                                    <template v-if="task.injury && task.injury.length !== 0">
+                                <template v-if="task.injury && task.injury.length !== 0">
                                         <ul>
                                             <li>{{task.injury.adventurer.name.full}} suffered
                                                 <span class="text-danger">{{task.injury.injury.injuryType}} {{task.injury.injury.bodyPart}}</span>
@@ -118,7 +118,7 @@
                                         </ul>
                                     </template>
 
-                                    <template v-if="task.casualties && task.casualties.length !== 0">
+                                <template v-if="task.casualties && task.casualties.length !== 0">
                                         <ul>
                                             <li v-for="adventurer in task.casualties">
                                                 {{adventurer.name.full}} has
